--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
     <h1>Image Upload</h1>
     <input type="file" id="imageInput" multiple accept="image/*" />
-    <button id="button" onclick="redirectToLoginPage()">Login/SignUp</button>
+    <!-- <button id="button" onclick="redirectToLoginPage()">Login/SignUp</button> -->
+    <button id="button" onclick="logout()">Logout</button>
     <div id="imageContainer"></div>
     <script src="script.js"></script>
   </body>
