--- a/Login-signup/login-signup.html
+++ b/Login-signup/login-signup.html
@@ -8,22 +8,23 @@
 </head>
 <body>
 <div class="center-text">Sentify</div>
-<a href="../index.html" class="back-button"><i class="fas fa-arrow-left"></i></a>
+<!-- <a href="../index.html" class="back-button"><i class="fas fa-arrow-left"></i></a> -->
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
 		<form action="#">
 			<h1>Create Account</h1>
 			<div class="social-container">
 				<!-- <a href="#" class="social"><i class="fab fa-facebook-f"></i></a> -->
-				<a href="#" class="social"><i class="fab fa-microsoft"></i></i></a>
 				<a href="#" class="social"><i class="fab fa-google"></i></a>
+				<a href="#" class="social"><i class="fab fa-apple"></i></a>
+				<a href="#" class="social"><i class="fab fa-microsoft"></i></i></a>
 				<!-- <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a> -->
 			</div>
 			<span>or use your email for registration</span>
-			<input type="text" placeholder="Name" />
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
-			<button>Sign Up</button>
+			<input type="text" id="regname" placeholder="Name" />
+			<input type="email" id="regmail" placeholder="Email" />
+			<input type="password" id="regpass" placeholder="Password" />
+			<button onclick="register()" >Sign Up</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
@@ -31,15 +32,15 @@
 			<h1>Sign in</h1>
 			<div class="social-container">
 				<!-- <a href="#" class="social"><i class="fab fa-facebook-f"></i></a> -->
-				<a href="#" class="social"><i class="fab fa-microsoft"></i></i></a>
 				<a href="#" class="social"><i class="fab fa-google"></i></a>
-				<!-- <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a> -->
+				<a href="#" class="social"><i class="fab fa-apple"></i></a>
+				<a href="#" class="social"><i class="fab fa-microsoft"></i></i></a>
 			</div>
 			<span>or use your account</span>
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<input type="email" id="logmail" placeholder="Email" />
+			<input type="password" id="logpass" placeholder="Password" />
 			<a href="#">Forgot your password?</a>
-			<button>Sign In</button>
+			<button onclick="login()">Sign In</button>
 		</form>
 	</div>
 	<div class="overlay-container">
@@ -50,13 +51,26 @@
 				<button class="ghost" id="signIn">Sign In</button>
 			</div>
 			<div class="overlay-panel overlay-right">
-				<h1>Hello, Friend!</h1>
-				<p>Enter your personal details and start journey with us</p>
+				<h1>Hello, User!</h1>
+				<p>Enter your personal details and start your journey with Sentify</p>
 				<button class="ghost" id="signUp">Sign Up</button>
 			</div>
 		</div>
 	</div>
 </div>
-<script  src="./login-signup.js"></script>
+<!-- <script>
+    document.getElementById('sub').addEventListener('click', function() {
+        register();
+    });
+</script> -->
+<!-- <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database.js"></script> -->
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+<script src="auth.js"></script>
+<script src="login-signup.js"></script>
 </body>
 </html>
