--- a/Login-signup/login-signup.html
+++ b/Login-signup/login-signup.html
@@ -15,7 +15,7 @@
 			<h1>Create Account</h1>
 			<div class="social-container">
 				<!-- <a href="#" class="social"><i class="fab fa-facebook-f"></i></a> -->
-				<a href="#" class="social"><i class="fab fa-google"></i></a>
+				<a href="#" class="social" onclick="googleSignUp()"><i class="fab fa-google"></i></a>
 				<a href="#" class="social"><i class="fab fa-apple"></i></a>
 				<a href="#" class="social"><i class="fab fa-microsoft"></i></i></a>
 				<!-- <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a> -->
